# ai-agent-recon

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml
customer-support-langgraph-agent/: README.md  pyproject.toml  requirements.txt
customer-support-langgraph-agent/config/: config.yaml
customer-support-langgraph-agent/data/: customers.json  orders.json  session_memory.json  tickets.json
customer-support-langgraph-agent/data/knowledge_base/: account_security.md  refund_policy.md  shipping_policy.md  subscription_plans.md
customer-support-langgraph-agent/docs/: architecture.md  blog.md
customer-support-langgraph-agent/logs/: audit.jsonl
customer-support-langgraph-agent/src/customer_support_langgraph_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
customer-support-langgraph-agent/src/supportmate/: __init__.py  api.py  audit.py  cli.py  config.py  graph.py  llm.py  main.py  memory.py  models.py  prompts.py  security.py  state.py
customer-support-langgraph-agent/src/supportmate/nodes/: __init__.py  escalation.py  guardrails.py  memory_node.py  react_agent.py  responder.py  router.py  tool_executor.py
customer-support-langgraph-agent/src/supportmate/tools/: __init__.py  customer_tools.py  kb_tools.py  lc_tools.py  order_tools.py  ticket_tools.py
customer-support-langgraph-agent/src/supportmate/utils/: banner.py  json_store.py  logging.py
customer-support-langgraph-agent/tests/: conftest.py  test_api.py  test_graph.py  test_memory.py  test_security.py  test_tools.py
datasets/: probes.yaml
docs/: blog.md  pt-team-workflow.md
examples/: demo_target.py
pt-output/: attack-vectors.json  normalized-recon.json  owasp-mapping.json  pt-test-plan.json  report.html  report.md
reports/: ai_agent_recon_20260511T174348Z.html  ai_agent_recon_20260511T174348Z.json  ai_agent_recon_20260511T174348Z.md
reports/costumer-support-agent/: ai_agent_recon_20260511T115303Z.html  ai_agent_recon_20260511T115303Z.json  ai_agent_recon_20260511T115303Z.md  ai_agent_recon_20260511T121046Z.html  ai_agent_recon_20260511T121046Z.json  ai_agent_recon_20260511T121046Z.md  ai_agent_recon_20260511T125514Z.html  ai_agent_recon_20260511T125514Z.json  ai_agent_recon_20260511T125514Z.md  ai_agent_recon_20260511T130931Z.html  ai_agent_recon_20260511T130931Z.json  ai_agent_recon_20260511T130931Z.md
samples/: recon_basic_chatbot.json  recon_code_execution_agent.json  recon_mcp_agent.json  recon_memory_rag_agent.json  recon_multi_agent_system.json  recon_tool_enabled_agent.json
src/agent_recon/: __init__.py  classifier_schema.py  cli.py  config.py  main.py  models.py  probe_loader.py  report_writer.py  target_client.py
src/agent_recon/crew/: __init__.py  agents.py  crew_runner.py  tasks.py
src/agent_recon/pt/: __init__.py  adapter.py  attack_vectors.py  owasp_mapper.py  pipeline.py  pt_manager.py  report.py  schema.py  scoring.py
src/agent_recon/pt/crew/: __init__.py  agents.py  crew_runner.py  tasks.py  tools.py
src/agent_recon/tools/: __init__.py  target_tools.py
src/agent_recon/utils/: __init__.py  banner.py  llm_check.py  logging.py  output.py
src/ai_agent_recon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_abort_flag.py  test_classifier_schema.py  test_llm_check.py  test_probe_loader.py  test_probe_registry.py  test_probe_registry_payload.py  test_proxy.py  test_pt_crew.py  test_pt_pipeline.py  test_target_client.py
