[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-recon"
version = "1.0.0"
description = "Safe, authorized reconnaissance tool for AI-agent applications, built on CrewAI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary - Authorized security research use only" }
authors = [
  { name = "AI Agent Recon Authors" }
]
keywords = ["ai-security", "red-team", "crewai", "reconnaissance", "ai-agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "crewai>=0.70.0",
  "crewai-tools>=0.12.0",
  "pydantic>=2.6",
  "typer>=0.12",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "rich>=13.7",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
demo = ["fastapi>=0.110", "uvicorn>=0.29"]
test = ["pytest>=8.0"]

[project.scripts]
# Primary CLI command. After `pip install -e .` this becomes available as
# `ai-agent-recon` on PATH (a Windows .exe shim or Linux/macOS script).
# Points at `main()` rather than the Typer `app` instance directly so the
# UTF-8 stdout reconfigure in main.py runs before the banner is printed.
ai-agent-recon = "agent_recon.main:main"
# Short alias for power users / scripting.
aar = "agent_recon.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agent_recon" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
