[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-langgraph-agent"
version = "1.0.0"
description = "SupportMate - a LangGraph-based customer support AI agent."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SupportMate" }]
license = { text = "MIT" }
keywords = ["langgraph", "ai-agent", "customer-support", "llm", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
supportmate = "supportmate.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
# Silence cosmetic third-party warnings that clutter test output.
# Tests import `supportmate.graph` directly, bypassing the warning
# filters set up in `supportmate.main`, so we duplicate them here.
filterwarnings = [
    "ignore::PendingDeprecationWarning",
    "ignore::DeprecationWarning:langchain.*",
    "ignore::DeprecationWarning:langgraph.*",
    "ignore::langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
    "ignore::langchain_core._api.beta_decorator.LangChainBetaWarning",
    "ignore:.*function callbacks cannot be serialized.*:UserWarning",
    "ignore:.*allowed_objects.*",
]
